[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GameUI/Events/CharacterEvents/SelfReflectionEvent.gd" type="Script" id=1]
[ext_resource path="res://Styles/SmallFontLightTheme.tres" type="Theme" id=2]

[node name="SelfReflectionEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPortraitContainer" type="Control" parent="HBoxContainer"]
margin_right = 318.0
margin_bottom = 320.0
size_flags_horizontal = 3

[node name="LeftPortrait" type="TextureRect" parent="HBoxContainer/LeftPortraitContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -128.0
margin_right = 256.0
margin_bottom = 128.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightPortraitContainer" type="Control" parent="HBoxContainer"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 320.0
size_flags_horizontal = 3

[node name="RightPortrait" type="TextureRect" parent="HBoxContainer/RightPortraitContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -128.0
margin_bottom = 128.0
size_flags_horizontal = 3
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
